Added new responsiveness for modal of the first 6 projects

--- a/public/html/modal-projects-bk.html
+++ b/public/html/modal-projects-bk.html
@@ -1,73 +1,40 @@
-<div class="projects-item-notebook">
-    <img class="projects-item-device-img" src="/img/projects/notebook.png">
-    <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="bk-main-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-01-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-02-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-03-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-04-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
-                        <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
+<div class="carousel-labels">
+    <h3 class="projects-item-modal-title">Burger King <span class="line-breaker">delivery service</span></h3>
+    <ul class="carousel-labels-list">
+        <li class="carousel-label active">Homepage</li>
+        <li class="carousel-label">Restaurant menu</li>
+        <li class="carousel-label">Checkout</li>
+        <li class="carousel-label">Order tracking</li>
+        <li class="carousel-label">&nbsp;</li>
+    </ul>
+</div>
+<div class="modal-devices-wrapper">
+    <div class="projects-item-notebook">
+        <img class="projects-item-device-img" src="/img/projects/notebook.png">
+        <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="bk-main-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-01-notebook.jpg">
                     </div>
                 </div>
-            </div>
-        </div>
-        <ol class="carousel-indicators">
-            <li data-target="#bk-main-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#bk-main-carousel" data-slide-to="1"></li>
-            <li data-target="#bk-main-carousel" data-slide-to="2"></li>
-            <li data-target="#bk-main-carousel" data-slide-to="3"></li>
-            <li data-target="#bk-main-carousel" data-slide-to="4"></li>
-        </ol>
-    </div>
-</div>
-<div class="projects-item-mobile">
-    <img class="projects-item-device-img" src="/img/projects/mobile.png">
-    <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="bk-secondary-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-01-mobile.jpg">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-02-notebook.jpg">
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-02-mobile.jpg">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-03-notebook.jpg">
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-03-mobile.jpg">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-04-notebook.jpg">
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/bk-04-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
                         <div class="projects-item-modal-details-wrapper">
                             <h3 class="projects-item-modal-title">My contribution</h3>
                             <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
@@ -77,24 +44,57 @@
                 </div>
             </div>
             <ol class="carousel-indicators">
-                <li data-target="#bk-secondary-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#bk-secondary-carousel" data-slide-to="1"></li>
-                <li data-target="#bk-secondary-carousel" data-slide-to="2"></li>
-                <li data-target="#bk-secondary-carousel" data-slide-to="3"></li>
-                <li data-target="#bk-secondary-carousel" data-slide-to="4"></li>
+                <li data-target="#bk-main-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#bk-main-carousel" data-slide-to="1"></li>
+                <li data-target="#bk-main-carousel" data-slide-to="2"></li>
+                <li data-target="#bk-main-carousel" data-slide-to="3"></li>
+                <li data-target="#bk-main-carousel" data-slide-to="4"></li>
             </ol>
         </div>
     </div>
-</div>
-<div class="carousel-labels">
-    <h3 class="projects-item-modal-title">Burger King <span class="line-breaker">delivery service</span></h3>
-    <ul class="carousel-labels-list">
-        <li class="carousel-label active">Homepage</li>
-        <li class="carousel-label">Restaurant menu</li>
-        <li class="carousel-label">Checkout</li>
-        <li class="carousel-label">Order tracking</li>
-        <li class="carousel-label"></li>
-    </ul>
+    <div class="projects-item-mobile">
+        <img class="projects-item-device-img" src="/img/projects/mobile.png">
+        <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="bk-secondary-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-01-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-02-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-03-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/bk-04-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
+                            <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#bk-secondary-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#bk-secondary-carousel" data-slide-to="1"></li>
+                    <li data-target="#bk-secondary-carousel" data-slide-to="2"></li>
+                    <li data-target="#bk-secondary-carousel" data-slide-to="3"></li>
+                    <li data-target="#bk-secondary-carousel" data-slide-to="4"></li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </div>
 <a class="left carousel-control" href="#bk-main-carousel" role="button" data-slide="prev">
     <
