--- a/public/html/modal-projects-cubomusica.html
+++ b/public/html/modal-projects-cubomusica.html
@@ -8,7 +8,7 @@
 </div>
 <div class="projects-item-samsung-tv">
     <img class="projects-item-device-img" src="/img/projects/samsung-tv.png">
-    <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="cubomusica-main-carousel" >
+    <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="cubomusica-main-carousel" >
         <div class="carousel-inner" role="listbox">
             <div class="carousel-item active tse-scrollable wrapper">
                 <div class="tse-content">
