--- a/public/html/modal-projects-foodora.html
+++ b/public/html/modal-projects-foodora.html
@@ -1,90 +1,3 @@
-<div class="projects-item-notebook">
-    <img class="projects-item-device-img" src="/img/projects/notebook.png">
-    <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="foodora-main-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-01-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-02-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-03-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-04-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My Contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for Foodora e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints), CSS animations and JavaScript features including: restaurants search, menu, toppings selection, cart and checkout process. </p>
-                        <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <ol class="carousel-indicators">
-            <li data-target="#foodora-main-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#foodora-main-carousel" data-slide-to="1"></li>
-            <li data-target="#foodora-main-carousel" data-slide-to="2"></li>
-            <li data-target="#foodora-main-carousel" data-slide-to="3"></li>
-            <li data-target="#foodora-main-carousel" data-slide-to="4"></li>
-        </ol>
-    </div>
-</div>
-<div class="projects-item-mobile">
-    <img class="projects-item-device-img" src="/img/projects/mobile.png">
-    <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="foodora-secondary-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-01-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-02-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-03-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/foodora-04-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My Contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for Foodora e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints), CSS animations and JavaScript features including: restaurants search, menu, toppings selection, cart and checkout process. </p>
-                        <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
-                    </div>
-                </div>
-            </div>
-            <ol class="carousel-indicators">
-                <li data-target="#foodora-secondary-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#foodora-secondary-carousel" data-slide-to="1"></li>
-                <li data-target="#foodora-secondary-carousel" data-slide-to="2"></li>
-                <li data-target="#foodora-secondary-carousel" data-slide-to="3"></li>
-                <li data-target="#foodora-secondary-carousel" data-slide-to="4"></li>
-            </ol>
-        </div>
-    </div>
-</div>
-
 <div class="carousel-labels">
     <h3 class="projects-item-modal-title">Foodora <span class="line-breaker">food delivery startup</span></h3>
     <ul class="carousel-labels-list">
@@ -92,8 +5,96 @@
         <li class="carousel-label">Restaurants list</li>
         <li class="carousel-label">Restaurant menu</li>
         <li class="carousel-label">Checkout</li>
-        <li class="carousel-label"></li>
+        <li class="carousel-label">&nbsp;</li>
     </ul>
+</div>
+<div class="modal-devices-wrapper">
+    <div class="projects-item-notebook">
+        <img class="projects-item-device-img" src="/img/projects/notebook.png">
+        <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="foodora-main-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-01-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-02-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-03-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-04-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My Contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for Foodora e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints), CSS animations and JavaScript features including: restaurants search, menu, toppings selection, cart and checkout process. </p>
+                            <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ol class="carousel-indicators">
+                <li data-target="#foodora-main-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#foodora-main-carousel" data-slide-to="1"></li>
+                <li data-target="#foodora-main-carousel" data-slide-to="2"></li>
+                <li data-target="#foodora-main-carousel" data-slide-to="3"></li>
+                <li data-target="#foodora-main-carousel" data-slide-to="4"></li>
+            </ol>
+        </div>
+    </div>
+    <div class="projects-item-mobile">
+        <img class="projects-item-device-img" src="/img/projects/mobile.png">
+        <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="foodora-secondary-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-01-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-02-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-03-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/foodora-04-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My Contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for Foodora e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints), CSS animations and JavaScript features including: restaurants search, menu, toppings selection, cart and checkout process. </p>
+                            <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, TDD, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#foodora-secondary-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#foodora-secondary-carousel" data-slide-to="1"></li>
+                    <li data-target="#foodora-secondary-carousel" data-slide-to="2"></li>
+                    <li data-target="#foodora-secondary-carousel" data-slide-to="3"></li>
+                    <li data-target="#foodora-secondary-carousel" data-slide-to="4"></li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </div>
 <a class="left carousel-control" href="#foodora-main-carousel" role="button" data-slide="prev">
     <
