--- a/public/html/modal-projects-vendomo-crm.html
+++ b/public/html/modal-projects-vendomo-crm.html
@@ -1,90 +1,3 @@
-<div class="projects-item-notebook">
-    <img class="projects-item-device-img" src="/img/projects/notebook.png">
-    <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="vendomo-crm-main-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-01-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-02-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-03-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-04-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My Contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app, I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>
-                        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <ol class="carousel-indicators">
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="1"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="2"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="3"></li>
-            <li data-target="#vendomo-crm-main-carousel" data-slide-to="4"></li>
-        </ol>
-    </div>
-</div>
-<div class="projects-item-mobile">
-    <img class="projects-item-device-img" src="/img/projects/mobile.png">
-    <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-01-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-02-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-03-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-crm-04-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My Contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app, I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>
-                        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>
-                    </div>
-                </div>
-            </div>
-            <ol class="carousel-indicators">
-                <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="1"></li>
-                <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="2"></li>
-                <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="3"></li>
-                <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="4"></li>
-            </ol>
-        </div>
-    </div>
-</div>
 <div class="carousel-labels">
     <h3 class="projects-item-modal-title">Vendomo <span class="line-breaker">CRM dashboard</span></h3>
     <ul class="carousel-labels-list">
@@ -92,14 +5,102 @@
         <li class="carousel-label">Appointments</li>
         <li class="carousel-label">Candidates</li>
         <li class="carousel-label">Candidate details</li>
-        <li class="carousel-label"></li>
+        <li class="carousel-label">&nbsp;</li>
     </ul>
 </div>
-<div class="left carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="prev">
+<div class="modal-devices-wrapper">
+    <div class="projects-item-notebook">
+        <img class="projects-item-device-img" src="/img/projects/notebook.png">
+        <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="vendomo-crm-main-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-01-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-02-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-03-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-04-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My Contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app, I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>
+                            <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ol class="carousel-indicators">
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="1"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="2"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="3"></li>
+                <li data-target="#vendomo-crm-main-carousel" data-slide-to="4"></li>
+            </ol>
+        </div>
+    </div>
+    <div class="projects-item-mobile">
+        <img class="projects-item-device-img" src="/img/projects/mobile.png">
+        <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-crm-secondary-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-01-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-02-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-03-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-crm-04-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My Contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for Vendomo CRM web app, I created the responsive HTML/CSS layout on all pages and I contributed to the JavaScript features including management of properties, candidatures and appointments. </p>
+                            <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Gulp, Git.</p>
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="1"></li>
+                    <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="2"></li>
+                    <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="3"></li>
+                    <li data-target="#vendomo-crm-secondary-carousel" data-slide-to="4"></li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</div>
+<a class="left carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="prev">
     <
     <span class="sr-only">Previous</span>
-</div>
-<div class="right carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="next">
+</a>
+<a class="right carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="next">
     >
     <span class="sr-only">Next</span>
-</div>
+</a>
