--- a/public/html/modal-projects-vendomo.html
+++ b/public/html/modal-projects-vendomo.html
@@ -1,73 +1,74 @@
-<div class="projects-item-notebook">
-    <img class="projects-item-device-img" src="/img/projects/notebook.png">
-    <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="vendomo-main-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-01-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-02-notebook.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My Contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website, I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
-                        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <ol class="carousel-indicators">
-            <li data-target="#vendomo-main-carousel" data-slide-to="0" class="active"></li>
-            <li data-target="#vendomo-main-carousel" data-slide-to="1"></li>
-            <li data-target="#vendomo-main-carousel" data-slide-to="3"></li>
-        </ol>
-    </div>
-</div>
-<div class="projects-item-mobile">
-    <img class="projects-item-device-img" src="/img/projects/mobile.png">
-    <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-secondary-carousel" >
-        <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-01-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <img class="projects-item-img-full" src="/img/projects/vendomo-02-mobile.jpg">
-                </div>
-            </div>
-            <div class="carousel-item tse-scrollable wrapper">
-                <div class="tse-content">
-                    <div class="projects-item-modal-details-wrapper">
-                        <h3 class="projects-item-modal-title">My Contribution</h3>
-                        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website, I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
-                        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
-                    </div>
-                </div>
-            </div>
-            <ol class="carousel-indicators">
-                <li data-target="#vendomo-secondary-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#vendomo-secondary-carousel" data-slide-to="1"></li>
-                <li data-target="#vendomo-secondary-carousel" data-slide-to="3"></li>
-            </ol>
-        </div>
-    </div>
-</div>
 <div class="carousel-labels">
     <h3 class="projects-item-modal-title">Vendomo<span class="line-breaker">real estate startup</span></h3>
     <ul class="carousel-labels-list">
         <li class="carousel-label active">Homepage</li>
         <li class="carousel-label">How it works</li>
-        <li class="carousel-label"></li>
-        <li class="carousel-label"></li>
+        <li class="carousel-label">&nbsp;</li>
     </ul>
+</div>
+<div class="modal-devices-wrapper">
+    <div class="projects-item-notebook">
+        <img class="projects-item-device-img" src="/img/projects/notebook.png">
+        <div class="projects-item-img-full-wrapper carousel main-carousel slide" id="vendomo-main-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-01-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-02-notebook.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My Contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website, I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
+                            <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ol class="carousel-indicators">
+                <li data-target="#vendomo-main-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#vendomo-main-carousel" data-slide-to="1"></li>
+                <li data-target="#vendomo-main-carousel" data-slide-to="2"></li>
+            </ol>
+        </div>
+    </div>
+    <div class="projects-item-mobile">
+        <img class="projects-item-device-img" src="/img/projects/mobile.png">
+        <div class="projects-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-secondary-carousel" >
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-01-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <img class="projects-item-img-full" src="/img/projects/vendomo-02-mobile.jpg">
+                    </div>
+                </div>
+                <div class="carousel-item tse-scrollable wrapper">
+                    <div class="tse-content">
+                        <div class="projects-item-modal-details-wrapper">
+                            <h3 class="projects-item-modal-title">My Contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website, I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
+                            <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
+                        </div>
+                    </div>
+                </div>
+                <ol class="carousel-indicators">
+                    <li data-target="#vendomo-secondary-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#vendomo-secondary-carousel" data-slide-to="1"></li>
+                    <li data-target="#vendomo-secondary-carousel" data-slide-to="3"></li>
+                </ol>
+            </div>
+        </div>
+    </div>
 </div>
 <a class="left carousel-control" href="#vendomo-main-carousel" role="button" data-slide="prev">
     <
